--- a/gb/20/1/24/n11818924.md
+++ b/gb/20/1/24/n11818924.md
@@ -1,33 +1,32 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oeiyl2369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oeiyl2369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oeiyl2369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oeiyl2369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oeiyl2369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oeiyl2369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oeiyl2369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oeiyl2369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/oeiyl2369/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oeiyl2369/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oeiyl2369/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oeiyl2369/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oeiyl2369/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>疫情失控 全大陆旅游暂停 故宫迪士尼关闭</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1195733679-600x400.jpg" />
-<h6>武汉肺炎疫情失控，中共官方24日公告暂缓旅游活动；北京故宫博物院、上海迪士尼等也宣布自25日起关闭。图为1月24日的北京西站。(Photo by NICOLAS ASFOURI/AFP via Getty Images)
+<h6>中共肺炎疫情失控，中共官方24日公告暂缓旅游活动；北京故宫博物院、上海迪士尼等也宣布自25日起关闭。图为1月24日的北京西站。(Photo by NICOLAS ASFOURI/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年01月25日讯】（大纪元记者李心茹综合报导）<ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89.md#1">武汉</a><ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E8%82%BA%E7%82%8E.md#1">肺炎</a><ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>失控，全大陆仅剩西藏未传疫情。中共官方24日公告暂缓<ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>活动；北京故宫博物院、上海迪士尼等也宣布自25日起关闭。</p>
-<h2>全大陆<ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>被叫停</h2>
+	<p>【大纪元2020年01月25日讯】（大纪元记者李心茹综合报导）中共<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%82%BA%E7%82%8E.md#1">肺炎</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89.md#1">武汉</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%82%BA%E7%82%8E.md#1">肺炎</a>）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>失控，全大陆仅剩西藏未传疫情。中共官方24日公告暂缓<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>活动；北京故宫博物院、上海迪士尼等也宣布自25日起关闭。</p>
+<h2>全大陆<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%85%E6%B8%B8.md#1">旅游</a>被叫停</h2>
 <p>官方24日正式下达禁游令，即日起暂时禁止接待国外旅游团。交通部观光局随后也通函所有旅行社，即日起到1月底，禁止团客赴中国各城市旅游。</p>
 <p>大陆文化和旅游办公厅稍早发布，将紧急通知暂停旅游企业经营活动，即日起全大陆旅行社及在线旅游企业，必须暂停经营团队旅游，以及机＋酒旅游产品，已出团的旅游团队可按合约完成行程。</p>
-<figure id="attachment_11818937" style="width: 300px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/1-20.jpg"><img class="wp-image-11818937 size-small" src="https://i.epochtimes.com/assets/uploads/2020/01/1-20-300x400.jpg" alt="" width="300" b="400" /></a><figcaption class="wp-caption-text">（网页截图）</figcaption></figure>
-<figure id="attachment_11818938" style="width: 300px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/2-24.jpg"><img class="wp-image-11818938 size-small" src="https://i.epochtimes.com/assets/uploads/2020/01/2-24-300x400.jpg" alt="" width="300" b="400" /></a><figcaption class="wp-caption-text">（网页截图）</figcaption></figure>
+<figure id="attachment_11818937" aria-describedby="caption-attachment-11818937" style="width: 300px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/1-20.jpg"><img class="wp-image-11818937 size-small" src="https://i.epochtimes.com/assets/uploads/2020/01/1-20-300x400.jpg" alt="" width="300" b="400" /></a><figcaption id="caption-attachment-11818937" class="wp-caption-text">（网页截图）</figcaption></figure>
+<figure id="attachment_11818938" aria-describedby="caption-attachment-11818938" style="width: 300px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/2-24.jpg"><img class="wp-image-11818938 size-small" src="https://i.epochtimes.com/assets/uploads/2020/01/2-24-300x400.jpg" alt="" width="300" b="400" /></a><figcaption id="caption-attachment-11818938" class="wp-caption-text">（网页截图）</figcaption></figure>
 <p>台湾交通部观光局24日也宣布，即日起全台湾旅行社暂停出团到中国大陆旅游。</p>
 <h2>故宫闭馆 2003年萨斯期间都没关门</h2>
-<p>据北京市卫健委消息，截至24日20时，北京市新增2例新型冠状病毒感染的<ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E8%82%BA%E7%82%8E.md#1">肺炎</a>病例，累计病例36人。感染病例中有多名医护人员。</p>
-<p>据财新网报导，目前已经有去<ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89.md#1">武汉</a>出差而感染的医护人员，回京后又传染给同事。</p>
+<p>据北京市卫健委消息，24日的感染病例继续猛增，其中有多名医护人员。</p>
+<p>据财新网报导，目前已经有去<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89.md#1">武汉</a>出差而感染的医护人员，回京后又传染给同事。</p>
 <p>北京市卫健委主任雷海潮表示，目前，北京市已经启动重大突发公共卫生事件一级响应。根据性质、危害程度、涉及范围，突发公共卫生事件划分为特别重大（Ⅰ级）、重大（Ⅱ级）、较大（Ⅲ级）和一般（Ⅳ级）四级。Ⅰ级响应是发生特别重大突发公共卫生事件。</p>
 <p>以往过年期间，北京历来有逛庙会的传统。但目前包括庙会在内的大型活动已被取消。此外，包括故宫博物院、国家博物馆等在内的多家文旅单位都已宣布闭馆。</p>
-<p>据了解，故宫在2003年萨斯<ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>期间亦没有闭馆，这是故宫近40年来首次因疫情闭馆。</p>
+<p>据了解，故宫在2003年萨斯<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85.md#1">疫情</a>期间亦没有闭馆，这是故宫近40年来首次因疫情闭馆。</p>
 <h2>上海启动一级响应 迪士尼等关闭</h2>
-<p>上海市卫健委星期五（24日）说，上海星期四新增4例确诊病例，累计发现确诊病例20例。</p>
+<p>上海市卫健委星期五（24日）说，上海确诊病例也大增。</p>
 <p>上海已启动 “重大突发公共卫生事件一级响应机制”，多个景点、文化演出场所都公告暂时关闭，包括上海环球金融中心观光厅、金茂大厦和迪士尼乐园。</p>
 <p>上海迪士尼度假区23日在官网上宣布，该度假区将自2020年1月25日起暂时关闭上海迪士尼乐园、迪士尼小镇（包括华特迪士尼大剧院）和星愿公园。已经购买乐园门票、预定酒店等的游客可以通过原购票渠道办理退款。</p>
-<h2>湖北18个市县“<ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E5%B0%81%E5%9F%8E.md#1">封城</a>”</h2>
-<p>官方的疫情通报显示，截至1月23日24时，已有25人死于新型冠状病毒，累计报告的确诊病例830例，其中重症177例。死亡人数在24小时内增加了六人，而确诊病例增加了200多人。</p>
-<p>据界面新闻不完全统计，截至2020年1月24日14时，继新型冠状病毒肺炎疫情中心武汉“<ahref="https://github.com/oeiyl2369/djy/blob/master/gb/tag/%E5%B0%81%E5%9F%8E.md#1">封城</a>”后，毗邻武汉多城市亦宣布封城，包括黄冈市、鄂州市、赤壁市、荆州市等18个市县。</p>
+<h2>湖北18个市县“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B0%81%E5%9F%8E.md#1">封城</a>”</h2>
+<p>作为疫情的重灾区，湖北的疫情继续恶化。据界面新闻不完全统计，截至2020年1月24日14时，继中共病毒肺炎（武汉肺炎）疫情中心武汉“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%B0%81%E5%9F%8E.md#1">封城</a>”后，毗邻武汉多城市亦宣布封城，包括黄冈市、鄂州市、赤壁市、荆州市等18个市县。</p>
 <p>路透社的报导说，在武汉，人们对政府越来越不满，担心现在可能为时已晚。一位不愿意透露姓名的30岁的当地居民说：“在最开始的时候，他们没有采取措施，对公众几乎没有提供任何信息。”</p>
-<p>反而，政府继续抓提供信息的“造谣者”。山东省的一个警察局22日发布消息称拘留了四名居民，理由是散布谣言称该地区有一名疑似冠状病毒患者。在那种环境下，其他人都不敢出声。</p>
+<p>反而，政府继续抓提供信息的“造谣者”。山东省的一个警察局22日发布消息称拘留了四名居民，理由是散布谣言称该地区有一名疑似中共病毒患者。在那种环境下，其他人都不敢出声。</p>
 <p>“有关方面无不在传递一个信号，那就是事关疫情，只有官方可以说话”，《南方都市报》前记者于平在他的个人博客上写道，“其他人一律闭嘴。”</p>
 <p>“那就不叫信息公开”，于平补充说，“而是赤裸裸的信息垄断。”#</p>
 <p>责任编辑：林诗远</p>
@@ -36,36 +35,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/1/23/n11816845.md#1">病人突倒地 武汉多个视频震惊网络 遭封杀</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/1/24/n11817339.md#1">防治中共肺炎 专家：北京应交出这些数据</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/1/24/n11817549.md#1">【唐靖远快评】疫情失控 武汉封城有何后果？</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/1/24/n11817672.md#1">袁斌：武汉当局为何错过了疫情的黄金防控期？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/23/n11816845.md#1">病人突倒地 武汉多个视频震惊网络 遭封杀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/24/n11817339.md#1">防治中共肺炎 专家：北京应交出这些数据</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/24/n11817549.md#1">【唐靖远快评】疫情失控 武汉封城有何后果？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/1/24/n11817672.md#1">袁斌：武汉当局为何错过了疫情的黄金防控期？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/7/n11851768.md#1" target="_blank">大瘟疫德国两城曾同命运 为何今日迥异</a></li><li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/5/28/n4165491.md#1" target="_blank">生命在 信仰在</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/23/n11964881.md#1">武汉病例清零内幕被曝光 北京通知露端倪</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/22/n11964530.md#1">【一线采访】重症监护室里的“谋杀”</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
-<li><a href="https://github.com/oeiyl2369/djy/blob/master/gb/16/5/1/n7791109.md#1">利民珍事：卜式牧羊助国 皇帝感到稀奇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oeiyl2369/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oeiyl2369/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/24/n11818924.htm">疫情失控 全大陆旅游暂停 故宫迪士尼关闭</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/24/n11818924.htm">疫情失控 全大陆旅游暂停 故宫迪士尼关闭</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oeiyl2369/djy/blob/master/gb/20/1/24/n11818924.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oeiyl2369/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oeiyl2369/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oeiyl2369/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oeiyl2369/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oeiyl2369/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/1/24/n11818924.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
